deployment/postgres-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  volumes:
  - name: postgresdb
    persistentVolumeClaim:
        claimName: postgres-pv-claim
  containers:
  - name: postgres
    image: docker.io/postgres:14.2
    imagePullPolicy: Always
    volumeMounts:
    - name: postgresdb
      mountPath: /var/lib/postgresql/data    
    resources:
      limits:
        cpu: 256m 
        memory: 512Mi
        ephemeral-storage: 10Mi
#    livenessProbe:
#      httpGet:
#        path: /polls/
#        port: 8000
    ports:
    - containerPort: 5432
