deployment/mysite-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysite
spec:
  type: NodePort
  selector:
    app: mysite
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
