deployment/cis-92-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cis-92-ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts: 
    - www.mcran.one
    secretName: apps-cert-secret
  rules:
  - host: "www.mcran.one"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: mysite
            port:
              number: 8000
